--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -335,12 +335,16 @@ XrApi=NativeOpenXR
 +Profiles=(Name="UI",CollisionEnabled=QueryOnly,bCanModify=False,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility"),(Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Overlap),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap)),HelpMessage="WorldStatic object that overlaps all actors by default. All new custom channels will use its own default response. ")
 +Profiles=(Name="ItemPreset",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="Item",CustomResponses=((Channel="HelperTrace"),(Channel="Helper",Response=ECR_Overlap)),HelpMessage="Needs description")
 +Profiles=(Name="HelperPreset",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Helper",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Item",Response=ECR_Overlap)),HelpMessage="Needs description")
-+Profiles=(Name="CharacterPreset",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Character",CustomResponses=((Channel="Item"),(Channel="HelperTrace")),HelpMessage="Needs description")
++Profiles=(Name="CharacterPreset",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Character",CustomResponses=((Channel="Item"),(Channel="HelperTrace"),(Channel="Weapon",Response=ECR_Ignore)),HelpMessage="Needs description")
++Profiles=(Name="WeaponPreset",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="",CustomResponses=((Channel="Camera",Response=ECR_Ignore)),HelpMessage="Needs description")
++Profiles=(Name="EnemyPreset",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="",CustomResponses=((Channel="Camera",Response=ECR_Ignore),(Channel="Character")),HelpMessage="Needs description")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="3DWidget")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="Item")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="HelperTrace")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel4,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="Helper")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel5,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="Character")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel6,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Weapon")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel7,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Enemy")
 +EditProfiles=(Name="BlockAll",CustomResponses=((Channel="Helper"),(Channel="Character")))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
